--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "nodemon": "^3.1.4",
     "puppeteer": "^22.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
